--- a/Client/src/Components/DashboardPanel/Panel.css
+++ b/Client/src/Components/DashboardPanel/Panel.css
@@ -1,5 +1,5 @@
 .list-item{
-    color:#a9a9a9;
+    color:black;
     cursor: pointer;
     display: flex;
     align-items: center;
@@ -7,7 +7,7 @@
     justify-content: left;
     text-align: left;
     font-size: 16px;
-    background-color: white;
+
 }
 .list-active{
     color:black;
